# qmlDemo

./: .gitignore
lib/opencv/mingw/: setup_vars_opencv4.cmd
lib/opencv/mingw/x64/mingw/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake
lib/opencv/mingw/x64/mingw/lib/pkgconfig/: opencv4.pc
lib/opencv/msvc/: setup_vars_opencv4.cmd
lib/opencv/msvc/x64/vc17/lib/: opencv_calib3d4110d.lib  opencv_core4110d.lib  opencv_dnn4110d.lib  opencv_features2d4110d.lib  opencv_flann4110d.lib  opencv_gapi4110d.lib  opencv_highgui4110d.lib  opencv_imgcodecs4110d.lib  opencv_imgproc4110d.lib  opencv_ml4110d.lib  opencv_objdetect4110d.lib  opencv_photo4110d.lib  opencv_stitching4110d.lib  opencv_video4110d.lib  opencv_videoio4110d.lib
src/: CMakeLists.txt  install_msvc.bat  main.cpp  main.qml  myvideo.cpp  myvideo.h
